# static-conversations

./: .gitignore  .pydocstyle  pyproject.toml
convo/: __init__.py  api.py
convo/config/: __init__.py
convo/console/: __init__.py  auth.py  environment.py  loader.py
convo/console/commands/: load.py
convo/github/: __init__.py  record.py  user.py
tests/: test_convo.py
